[package]
name = "tonic-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.3"
tonic = "0.8.3"
tokio = { version = "1.23.0", features = ["full"]}

[build-dependencies]
tonic-build = "0.8.4"